# axiom-tui

./: .gitignore  LICENSE  README.md  lsp.py  main.py  pyproject.toml  style.tcss  test.py
.github/workflows/: release.yml
